# QtExamples

./: .gitignore  CMakeLists.txt  README.md
include/QtExamples/: grouping_model.h  grouping_model_test.h  model.h
src/: grouping_model.cpp  grouping_model_test.cpp  main.cpp  model.cpp
